[[bin]]
name = "uuid"
path = "src/main.rs"

[build-dependencies.rustc_version]
version = "0.2.3"

[dependencies.mac_address]
version = "1.0.0"

[dependencies.structopt]
version = "0.2.13"

[dependencies.uuid]
features = [
    "v1",
    "v3",
    "v4",
    "v5"
]
version = "0.7.1"

[package]
authors = [
    "Hunar Roop Kahlon <hunar.roop@gmail.com>"
]
description = "Generate a Uuid"
edition = "2018"
name = "uuid_cli"
version = "0.1.0"
